--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico?2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./assets/img/book_cover.jpg" rel="prefetch">
 </head>
 <body>
   <ral-root></ral-root>
